# office-mgmt

./: LICENSE  README.md
deploy/: README.md  backend-Dockerfile  deploy.sh  docker-compose.yml  frontend-Dockerfile  mdns-Dockerfile  wakeonlan-Dockerfile
device/: .gitignore  Readme.md  build.sh
device/apps/device_mgmt/: CMakeLists.txt  Makefile  build_package.sh  config.c  config.h  config.json  devicemgmt.service  keepalive.c  keepalive.h  main.c  mdns.c  mdns.h  mqtt.c  mqtt.h  netface.c  netface.h  virhost.c  virhost.h  wakeonlan.c  wakeonlan.h
device/lib/: .gitignore
device/lib/cJSON/: CMakeLists.txt  Makefile  cJSON.h
device/lib/util/: CMakeLists.txt  Makefile  liblog.c  liblog.h  libmdns.h  mdns.c  zwx_log.h
platform-backend/: .gitignore  go.mod  go.sum  main.go  start_mosquitto.sh  start_mysql.sh
platform-backend/config/: config.go  config.yaml  menu_permission.json
platform-backend/controller/: device_controller.go  device_group_controller.go  permission_controller.go  policy_controller.go  role_controller.go  user_controller.go  v1_controller.go
platform-backend/db/: mysql.go
platform-backend/docs/: docs.go  swagger.json  服务器管理方案.rp  服务器管理方案设计文档.docx  服务器管理方案设计文档.vsdx
platform-backend/dto/: device_group_req.go  device_req.go  keepalive.go  model_trans.go  permission_req.go  policy_req.go  role_req.go  user_req.go  util.go
platform-backend/errors/: errors.go
platform-backend/middleware/: cross.go  jwt.go  log.go  permission.go  recovery.go
platform-backend/migration/: 1_migration.up.sql  migration.go
platform-backend/models/: base.go  device.go  device_device_group_rel.go  device_group.go  menu_permission.go  menu_permission_api.go  policy.go  policy_device_group_rel.go  policy_device_rel.go  role.go  role_menu_permission.go  role_resource_permission.go  role_user.go  user.go  user_resource_permission.go  user_role.go
platform-backend/mqtt/: client.go  device.go
platform-backend/repository/: base_repository.go  device_device_group_rel_repository.go  device_group_repository.go  device_repository.go  menu_permission_api_repository.go  menu_permission_repository.go  policy_device_group_rel_repository.go  policy_device_rel_repository.go  policy_repository.go  role_menu_permission_repository.go  role_repository.go  role_resouce_permission_repository.go  role_user_repository.go  user_repository.go  user_resouce_permission_repository.go  user_role_repository.go
platform-backend/routers/: api.go  router.go
platform-backend/service/: v1_impl.go  v1_impl_device_delete.go  v1_impl_device_group_create.go  (+31 more)
platform-mdns/: go.mod  go.sum  main.go
platform-ui/: package-lock.json  package.json  vue.config.js
(+82 files in other folders)
